@@ -58,7 +58,7 @@ __RCSID("$NetBSD: readline.c,v 1.21 2002/03/18 16:20:36 christos Exp $");
 #endif
 
 #include "histedit.h"
-#include "readline/readline.h"
+#include "readline.h"
 #include "el.h"
 #include "fcns.h"		/* for EL_NUM_FCNS */
 
